# mcp-server

./: pyproject.toml
src/playwright_mcp_server/: config.json  mcp_langchain_client.py  playwright_mcp_server.py  sample.py  setup.py  start.sh  test.py
src/playwright_mcp_server/Archive/: mcp_langchain_client.py  playwright_mcp_server.py
