[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-mcp-server"
version = "1.0.0"
description = "MCP server for Playwright automation operations"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
playwright-mcp-server = "playwright_mcp_server.playwright_mcp_server:main"
